styles.css
body {
background-color: #00252e;
background-image: url("src/img/bg2.png");
background-position: left top;
background-repeat: repeat-x;
background-size: 200px;
color: #666;
font-family: Helvetica;
}

::selection {
background-color: #06a7ba;
color: white;
}

a {
color: #c0954b;
}

a:hover {
color: #cb821e;
}

a:active{
color: #cb821e;
}

a:visited{
color: #c0954b;
}

div {
border-radius: 5px;
}

.header {
padding: 5px;
margin-bottom: 2px;
margin-top: 7px;
padding-top: 15px;
background: -webkit-linear-gradient(#001419, rgba(0,0,0,0.8));
}

.footer {
margin-top: 2px;
background: rgba(0,0,0,0.8);
text-align: right;
font-size: 80%;
color: #00252e;
}


/* Search-box */
.search-box {
margin-bottom: 2px;
background: -webkit-linear-gradient(#000, rgba(0,0,0,0.8));
}

.search-box div[class^="col"] {
padding: 2px;
}

.search-advanced div[class^="col"] {
} 

input + .search-checkbox {
background-color: #000;
margin-left: 4px;
margin-top: -1px;
box-shadow: none;
}

input:not(:checked):focus + .search-checkbox {
border: 1px solid #c0954b;
background-color: #000;
box-shadow: 0px 0px 1px 1px #cb821e;
}

input:checked:focus  + .search-checkbox {
border: 1px solid #c0954b;
background-color: #000;
box-shadow: 0px 0px 1px 1px #cb821e;
}

input:not(:checked):not(:focus) + .search-checkbox {
border: 1px solid gray;
background-color: #000;
box-shadow: none;
}

input:checked:not(:focus)  + .search-checkbox {
border: 1px solid #c0954b;
background-color: #000;
box-shadow: none;
}

.search-advanced-link {
color: gray;
}

.search-button {
background: #111;
border: 1px solid gray;
padding: 3px;
width: 100%;
color: #c0954b;
}

.search-button:hover {
border: 1px solid #c0954b;
box-shadow: 0px 0px 1px 1px #cb821e;
}

#search-field {
background: #000;
height: 101%;
padding: 3px;
border: 1px solid gray;
}

#search-field:focus {
border: 1px solid #c0954b;
color: #c0954b;
box-shadow: 0px 0px 1px 1px #cb821e;
}
#search-field:hover {
border: 1px solid #c0954b;
color: #c0954b;
box-shadow: 0px 0px 1px 1px #cb821e;
}


#search-options.show {
display: block!important;
}


/* Results */
.results {
border-radius: 5px;
overflow-x: hidden;
background: -webkit-linear-gradient(rgba(0,0,0,0.8), #000);
}

.results div[class^="col"] {
}

.results-header div[class^="col"] {
background: #000000;
background-color: rgba(0,0,0,0.8);
color: #c0954b;
border-radius: 0px;
}

.results-header {
}

